discussion/kv_engine/128644/128644_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Add PrometheusStatCollector

Change-Id: I48aeaf7ff24366a6ef9bccf9fd355bf5f9704df8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-20 15:44:30.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-20 17:34:54.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2316/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10: error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
#include <prometheus/client_metric.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2316/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10:
error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2316/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/832/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/include/statistics/prometheus_collector.h b/include/statistics/prometheus_collector.h
index 3c81db5..cca0c4a 100644
--- a/include/statistics/prometheus_collector.h
+++ b/include/statistics/prometheus_collector.h
@@ -24,7 +24,8 @@
 
 class PrometheusStatCollector : public StatCollector {
 public:
-    PrometheusStatCollector(std::string prefix = &quot;kv_&quot;): prefix(std::move(prefix)) {
+    PrometheusStatCollector(std::string prefix = &quot;kv_&quot;)
+        : prefix(std::move(prefix)) {
     }
 
     // Allow usage of the &quot;helper&quot; methods defined in the base type.

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/832/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24154/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/statistics/prometheus_collector.h:22:10:
fatal error: "prometheus/client_metric.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24154/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3851/ : FAILURE

Compile error at [2020-05-20T17:20:41.447Z] ../kv_engine/include/statistics/all_stats.h:123:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 211>::_Type {aka cb::stats::StatSpec [211]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3851/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3756/ : FAILURE

Compile error at [2020-05-20T16:51:09.281Z] ../kv_engine/include/statistics/all_stats.h:123:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 211>::_Type {aka cb::stats::StatSpec [211]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3756/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3794/ : FAILURE

Compile error at [2020-05-20T17:08:57.284Z] ../kv_engine/include/statistics/all_stats.h:123:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 211>::_Type {aka cb::stats::StatSpec [211]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3794/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11631/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2858/ : FAILURE

Compile error at [2020-05-20T15:47:44.680Z] ../kv_engine/include/statistics/prometheus_collector.h:22:10:
fatal error: "prometheus/client_metric.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2858/ )
----------------------------------------------------------------------------------------------------------------------
